# study_FastAPI

./: .gitignore  .gitmessage  Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: todo.py
app/schemas/: __init__.py  todo.py  todo_item.py
planner/: pyproject.toml
scripts/: start.sh  start_project.sh  start_todo.sh
todo/: Dockerfile  pyproject.toml
todo/app/api/: __init__.py
todo/app/api/v1/endpoints/: todo.py
todo/app/schemas/: __init__.py  item.py  todo.py  todo_item.py
todo/templates/: todo.html
